Code improvements - Use new Java features and fix some Sonar issues (#1546)
* Code improvements (Sonar + Java 21)

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Code improvements (Sonar + Java 21)

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Code improvements (Sonar + Java 21)

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Remove forgotten unused import

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Code improvements (Sonar + Java 21)

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

* Fix Sonar issue

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>

---------

Signed-off-by: Vincent BOCHET <vincent.bochet@rte-france.com>